[package]
name = "xh"
version = "0.16.1"
authors = ["ducaale <sharaf.13@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Friendly and fast tool for sending HTTP requests"
documentation = "https://github.com/ducaale/xh"
homepage = "https://github.com/ducaale/xh"
repository = "https://github.com/ducaale/xh"
readme = "README.md"
keywords = ["http"]
categories = ["command-line-utilities"]
exclude = ["assets/xhs", "assets/xhs.1.gz"]

[dependencies]
anyhow = "1.0.38"
atty = "0.2"
brotli = { version = "3.3.0", default-features = false, features = ["std"] }
chardetng = "0.1.15"
chrono = { version = "0.4", optional = true }
clap = { version = "3.1.0", features = ["derive", "wrap_help"] }
clap_complete = { version = "3.1.0", optional = true }
cookie_crate = { version = "0.15", package = "cookie" }
cookie_store = { version = "0.15.0" }
digest_auth = "0.3.0"
dirs = "3.0.1"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
flate2 = "1.0.22"
indicatif = "0.16.2"
indoc = "1.0"
jsonxf = "1.1.0"
memchr = "2.4.1"
mime = "0.3.16"
mime2ext = "0.1.0"
mime_guess = "2.0"
once_cell = "1.8.0"
os_display = "0.1.3"
pem = "0.8.2"
rand = "0.8.3"
regex = "1"
roff = { version = "0.2.1", optional = true }
rpassword = "5.0.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_urlencoded = "0.7.0"
termcolor = "1.1.2"
time = "0.2.26"
unicode-width = "0.1.9"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "json", "multipart", "blocking", "socks", "cookies"]

[dependencies.syntect]
version = "4.4"
default-features = false
features = ["parsing", "html", "yaml-load", "dump-load", "dump-create", "regex-onig"]

[dev-dependencies]
assert_cmd = "2.0"
form_urlencoded = "1.0.1"
predicates = "1.0.7"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tempfile = "3.2.0"

[build-dependencies]
syntect = { version = "4.4", default-features = false }

[features]
default = ["online-tests"]
online-tests = []
native-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn"]
man-completion-gen = ["clap_complete", "chrono", "roff"]

[package.metadata.cross.build.env]
passthrough = ["CARGO_PROFILE_RELEASE_LTO"]

[package.metadata.deb]
features = []
section = "web"
license-file = "LICENSE"
preserve-symlinks = true
assets = [
  ["target/release/xh", "usr/bin/", "755"],
  ["assets/xhs", "usr/bin/", "777"],
  ["CHANGELOG.md", "usr/share/doc/xh/NEWS", "644"],
  ["README.md", "usr/share/doc/xh/README", "644"],
  ["doc/xh.1", "usr/share/man/man1/xh.1", "644"],
  ["assets/xhs.1.gz", "usr/share/man/man1/xhs.1.gz", "777"],
  ["completions/xh.bash", "usr/share/bash-completion/completions/xh", "644"],
  ["completions/xh.fish", "usr/share/fish/vendor_completions.d/xh.fish", "644"],
  ["completions/_xh", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
xh is a friendly and fast tool for sending HTTP requests.
It reimplements as much as possible of HTTPie's excellent design, with a focus
on improved performance.
"""
